@@ -57,4 +57,6 @@ v1.8.1 - 4/7/2011
 v1.9 - ?/?/????
  - Number of users logged in (with active shells)
  - Bugfixes
+ - Default to UTC if timezone isn't set, instead of letting php5.3
+   barf
  - HTML 5
